[metadata]

name = "resiland",
version = 0.2
description = "A testbed that allows one to modify resilience of a multistable networked dynamical system in a controlled manner and to generate time series of observables",
long_description = open("README.md", encoding = "utf8").read(),
author = "Tobias Fischer",
author_email = "tobias.fischer@uni-bonn.de"
url = "https://github.com/neurophysik/resiland",
project_urls =
	Bug Tracker = https://github.com/neurophysik/resiland/issues
python_requires = ">=3.3",
classifiers = [
	"Development Status :: 4 - Beta",
	"Licence :: OSI Approved :: BSD Licence",
	"Operating System :: POSIX",
	"Operating System :: MacOS :: MacOS X",
	"Operating System :: Microsoft :: Windows",
	"Programming Language :: Python",
	"Topic :: Scientific/Engineering :: Physics"]

[options]
package_dir = 
	= src
packages = find:
python_requirements = =>3.6

[options.packages.find]
where = src



