[metadata]

name = resiland
version = 0.2
description = A testbed that allows one to modify resilience of a multistable networked dynamical system in a controlled manner and to generate time series of observables
long_description = file: README.md
author = Tobias Fischer
author_email = tobias.fischer@uni-bonn.de
url = https://github.com/tobfischer/resiland
project_urls =
	Bug Tracker = https://github.com/tobfischer/resiland/issues
classifiers = 
	Development Status :: 4 - Beta
	License :: OSI Approved :: MIT License
	Operating System :: POSIX
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows
	Programming Language :: Python :: 3
	Topic :: Scientific/Engineering :: Physics


[options]
package_dir = 
	= src
packages = find:
python_requirements = =>3.6

[options.packages.find]
where = src